# 3D_Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  _camera_8cpp.html  _color_8cpp.html  _picture_8hpp.html  _picture_8hpp_source.html  _renderer_8cpp.html  _renderer_8hpp.html  _triangle_8hpp_source.html  _utils_8hpp.html  _utils_8hpp_source.html  _world_8hpp_source.html  classyar_1_1_entity-members.html  classyar_1_1_entity.html  classyar_1_1_renderer-members.html  classyar_1_1_screen-members.html  dir_a658eac7a6b8c3a142abe9181fedb6b3_dep.md5  dir_d34d6076313d6eb89fd0afa4caf71377.html  dir_d34d6076313d6eb89fd0afa4caf71377_dep.md5  files.html  globals.html  index.html  inherit_graph_0.map  inherit_graph_1.md5  inherit_graph_3.md5  inherit_graph_4.md5  menudata.js  namespaceyar.html
doc/html/: _camera_8hpp.html  _camera_8hpp_source.html  _color_8hpp.html  _color_8hpp_source.html  _entity_8cpp.html  (+69 more)
libs/YAR/: CMakeLists.txt
libs/YAR/include/YAR/: Camera.hpp  Color.hpp  Entity.hpp  Object.hpp  Picture.hpp  Renderer.hpp  Screen.hpp  Triangle.hpp  Utils.hpp  World.hpp
libs/YAR/src/: Camera.cpp  Color.cpp  Entity.cpp  Object.cpp  Picture.cpp  Renderer.cpp  Screen.cpp  Triangle.cpp  World.cpp
search/: all_4.js  all_7.js  all_9.js  all_c.js  classes_2.js  classes_3.js  files_2.js  files_4.js  files_5.js  functions_1.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js
src/: Application.cpp  Application.hpp  Kernel.cpp  Kernel.hpp  main.cpp
(+36 files in other folders)
